--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,12 +1,16 @@
 // Widescreens
 
 @include mediaXL {
-
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops and laptops
 @include mediaLg {
-
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // Tablets and small laptops
@@ -28,19 +32,19 @@
     min-height: 0;
 
     &.show {
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
   }
 
   .menu-nav {
     height: 75vh;
-    transform: translate3d(-100%,0,0);
+    transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
     height: 25vh;
-    transform: translate3d(100%,0,0);
+    transform: translate3d(100%, 0, 0);
 
     .portrait {
       background: url('../img/portrait_small.jpg');
@@ -49,11 +53,29 @@
       height: 150px;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+    grid-template-columns: 1fr;
+  }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
