--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,6 +11,22 @@
   .projects {
     grid-template-columns: repeat(3, 1fr);
   }
+
+  #about {
+    .top-container {
+      grid-template-columns: auto;
+    }
+
+    .bottom-container {
+      grid-template-columns: 1fr 1fr;
+
+      .job-3 {
+        grid-column: 1/3;
+        width: 60%;
+        justify-self: center;
+      }
+    }
+  }
 }
 
 // Tablets and small laptops
@@ -54,18 +70,44 @@
     }
   }
 
-  .about-info {
-    grid-template-areas:
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
-    grid-template-columns: 1fr;
+  #about {
+    padding: 0;
+    overflow-x: hidden;
+
+    .top-container {
+      grid-template-columns: 1fr;
+    }
+
+    .bottom-container {
+      grid-template-columns: 1fr;
+      padding: 2.5rem;
+      row-gap: 2rem;
+    }
+
+    h1 {
+      padding-top: 2rem;
+    }
+    h2 {
+      margin: 0 2rem;
+    }
   }
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  #home {
+    padding: 4rem 0;
+
+    .lg-heading {
+      width: 100vw;
+      font-size: 3.5rem;
+    }
+
+    .sm-heading {
+      margin-left: 2rem;
+      margin-right: 2rem;
+    }
   }
 }
 
@@ -73,6 +115,45 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  #home {
+    padding: 4rem 0;
+
+    .lg-heading {
+      width: 100vw;
+      font-size: 3.5rem;
+    }
+
+    .sm-heading {
+      margin-left: 2rem;
+      margin-right: 2rem;
+    }
+  }
+
+  main#about {
+    padding: 0 0.2rem;
+    overflow-x: hidden;
+
+    .about-info {
+      .top-container {
+        padding: 0;
+        grid-template-columns: 1fr;
+      }
+
+      .bottom-container {
+        padding: 1rem;
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .lg-heading {
+      padding-top: 2rem;
+    }
+
+    .sm-heading {
+      margin-bottom: 1rem;
+    }
   }
 
   .projects {
