--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,40 +140,79 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0.7rem;
+  justify-content: center;
+  padding: 4rem;
+  padding-top: 0;
 
-  img {
-    width: 100%;
-    border: 3px solid whitesmoke;
+  .item {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    column-gap: 0.3rem;
 
-    &:hover {
-      opacity: 0.5;
-      border-color: $secondary-color;
-      @include easeOut;
+    a:nth-child(1) {
+      grid-column: 1/3;
+      grid-row: 1/2;
+    }
+
+    a:nth-child(2) {
+      grid-row: 2/3;
+      grid-column: 1/2;
+    }
+
+    a:nth-child(3) {
+      grid-row: 2/3;
+      grid-column: 2/3;
+    }
+
+    img {
+      width: 100%;
+      border: 3px solid whitesmoke;
+      height: 15rem;
+      object-fit: cover;
+      object-position: center;
+
+      &:hover {
+        opacity: 0.5;
+        border-color: $secondary-color;
+        @include easeOut;
+      }
+    }
+
+    .btn {
+      display: block;
+      padding: 0.5rem 1rem;
+      border: none;
+      margin-bottom: 0.3rem;
+      display: grid;
+      grid-template-columns: auto auto;
+      align-items: center;
+
+      &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+      }
+    }
+
+    .btn-dark {
+      @extend .btn;
+      background: darken($primary-color, 50);
+
+      i {
+        justify-self: end;
+      }
+    }
+
+    .btn-light {
+      @extend .btn;
+      background: lighten($primary-color, 50);
+      color: #333;
+
+      i {
+        justify-self: end;
+      }
     }
   }
-}
-
-.btn {
-  display: block;
-  padding: 0.5rem 1rem;
-  border: none;
-  margin-bottom: 0.3rem;
-
-  &:hover {
-    background: $secondary-color;
-    color: set-text-color($secondary-color);
-  }
-}
-
-.btn-dark {
-  @extend .btn;
-  background: darken($primary-color, 50);
-}
-
-.btn-light {
-  @extend .btn;
-  background: lighten($primary-color, 50);
-  color: #333;
 }
 
 // Contact Page
