--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,15 +74,16 @@ main {
   }
 }
 
-.special {
-  opacity: 0;
-  transform: translate(-4rem, 4rem) rotate(90deg);
-}
+// .special {
+//   opacity: 0;
+//   transform: translate(-4rem, 4rem) rotate(90deg);
+//   transition: 0.5s;
+// }
 
-.show-icon {
-  opacity: 1;
-  transform: translate(0, 0) rotate(0);
-}
+// .show-icon {
+//   opacity: 1;
+//   transform: translate(0, 0) rotate(0);
+// }
 
 // About
 #about-cover {
