--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -41,14 +41,15 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity:0.9;
+  opacity: 0.9;
   visibility: hidden;
 
   &.show {
     visibility: visible;
   }
 
-  &-branding, &-nav {
+  &-branding,
+  &-nav {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -69,7 +70,7 @@
 
     &.show {
       // Slide it from top
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
   }
 
@@ -81,13 +82,15 @@
 
     &.show {
       // slide in from bottom
-      transform: translate3d(0,0,0);
+      transform: translate3d(0, 0, 0);
     }
 
     .portrait {
       width: 250px;
       height: 250px;
-      background: url('../img/portrait.jpg');
+      background: url('../img/portrait_small.jpg');
+      background-position: center;
+      background-size: cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
@@ -116,7 +119,7 @@
     font-weight: 300;
     color: set-text-color($primary-color);
     text-decoration: none;
-    @include easeOut; 
+    @include easeOut;
 
     &:hover {
       color: $secondary-color;
@@ -130,4 +133,3 @@
     transition-delay: $x * 0.1s;
   }
 }
-
